# nfcEinkCpp

./: CMakeLists.txt  README.md  main.cpp
include/: dither.hpp  image.hpp  nfc_eink.hpp  nfc_transport.hpp  protocol.hpp  transport_libnfc.hpp  transport_rcs380.hpp
src/: dither.cpp  image.cpp  nfc_eink.cpp  protocol.cpp  transport_libnfc.cpp  transport_rcs380.cpp
